<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16sp">

    <Button
        android:id="@+id/main_add_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bid" />

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"/>

    <ToggleButton
        android:id="@+id/main_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sort"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/main_save_prefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/save"/>
</GridLayout>